--- a/jobcy-backend-main/package.json
+++ b/jobcy-backend-main/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "echo 'No build step required for Node.js backend'",
+    "postinstall": "echo 'Backend dependencies installed successfully'"
   },
   "keywords": [],
   "author": "",
@@ -25,5 +27,9 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
 }
